--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -28,3 +28,34 @@ h1 {
   margin-top: 590px;
   margin-right: 40px;
 }
+
+legend {
+  font-style: italic;
+  font-weight: bolder;
+  font-family: georgia;
+  color: purple;
+}
+
+#playerModal label, #playerModal h5{
+  color: white;
+  font-weight: bold;
+
+}
+
+#teamModal label, #teamModal h5 {
+  color: black;
+  font-weight: bold;
+}
+
+.modal-content1 {
+  background-size: 500px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
+ }
+
+.modal-content2 {
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
+  }
